[FIX] Removed build warning introduced with Xcode 9.1.