@@ -5,7 +5,7 @@ Pod::Spec.new do |s|
     s.homepage          = 'https://github.com/marcelo-schroeder/IFAFoundation'
     s.license           = 'Apache-2.0'
     s.author            = { 'Marcelo Schroeder' => 'marcelo.schroeder@infoaccent.com' }
-    s.platform          = :ios, '10.0'
+    s.platforms         = { :ios => "10.0", :watchos => "3.0" }
     s.requires_arc      = true
     s.source            = { :git => 'https://github.com/marcelo-schroeder/IFAFoundation.git', :tag => 'v' +  s.version.to_s }
     s.source_files      = 'IFAFoundation/IFAFoundation/classes/**/*.{h,m,swift}'
